# ucsb-cs32-galaga

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docs.yml  tests.yml
cmake/: Prebuild.cmake
docs/: README.md  ckpt1.md  ckpt2.md  ckpt3.md  engine-cn.md  engine.md  index.html  leaderboard.html
src/: controllers.cpp  controllers.hpp  event.hpp  game.cpp  game.hpp  main.cpp  projectile.cpp  projectile.hpp  shape.cpp  shape.hpp  text.cpp  text.hpp  uiconf.hpp  vec.hpp
src/lib/: event.cpp  event.hpp  game.cpp  game.hpp  layer.cpp  layer.hpp  performance.cpp  performance.hpp  shape.cpp  shape.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp
